@startuml JugadorManoYMazo
skinparam classAttributeIconSize 0
class Jugador {
+establecerMano(Mano m)
+jugarMano(): int
+elegirCarta(Carta c)
+deseleccionarCarta(Carta c)
+obtenerCantidadDeCartas(): int
}

class Mazo {
-cartas: List<Carta>
-cartasDescartadas: List<Carta>
+repartirCartas(int cantidad, Mano m)
+mezclar()
+obtenerCantidadCartasDisponibles(): int
}


class Mano {
-maxCartas: int
-cartas: List<Carta>
+Mano(int cantidadDeCartas)
+agregarCarta(Carta c)
+quitarCarta(Carta c)
+obtenerCantidadDeCartas(): int
obtenerCarta(Carta c): Carta
}

class ManoDe5 {
-juego: Juego
+agregarCarta(Carta c)
+quitarCarta(Carta c)
+jugarMano(): int
}

Mazo ..> Mano: "usa"
Jugador --> Mano: "tiene"
Jugador -left-> ManoDe5: " tiene cartasSeleccionadas"
ManoDe5 -up-|> Mano
@enduml